--- a/cw04/Zad2/makefile
+++ b/cw04/Zad2/makefile
@@ -4,9 +4,12 @@ compile:
 	gcc -Wall main.c -o main
 
 test:
-	./main SIGINFO
-	./main RESETHAND
-	./main NOCLDSTOP
+	@echo "[TEST] SIGINFO"
+	@./main SIGINFO
+	@echo "[TEST] RESETHAND"
+	@./main RESETHAND
+	@echo "[TEST] NOCLDSTOP"
+	@./main NOCLDSTOP
 
 clean:
 	rm main
