--- a/cw06/Zad1/makefile
+++ b/cw06/Zad1/makefile
@@ -2,6 +2,7 @@ all: compile
 
 compile:
 	gcc -Wall server.c -o server
+	gcc -Wall client.c -o client
 
 test:
 	@echo "[TEST]"
@@ -9,3 +10,4 @@ test:
 
 clean:
 	rm server
+	rm client
