--- a/cw06/Zad2/makefile
+++ b/cw06/Zad2/makefile
@@ -1,8 +1,8 @@
 all: compile
 
 compile:
-	gcc -Wall server.c -o server
-	gcc -Wall client.c -o client
+	gcc -Wall server.c -o server -lrt
+	gcc -Wall client.c -o client -lrt
 
 test:
 	@echo "[TEST]"
